# BendGen

./: .gitignore  CLAUDE.md  README.md  bendgen.spec  bendgen_app.py  build-dist.sh  install-pi.sh  pyproject.toml  requirements.txt  setup.bat  setup.command  start-bendgen.bat  start-bendgen.command
.github/workflows/: build-release.yml
bendgen/: app.py  backup_name.py  dxf_analyzer.py  generator.py  image_analyzer.py  merge.py  models.py  stock_tooling.py
bendgen/static/: app.js  style.css
bendgen/templates/: help.html  index.html
